<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9AE37D"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/song_title"
        android:textColor="#3949AB"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/enter_song_title" />

    <TextView
        android:id="@+id/tvSingers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/singers"
        android:textColor="#182391"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etSingers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/enter_singer_name" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/year"
        android:textColor="#182391"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/enter_year" />

    <TextView
        android:id="@+id/tvStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_stars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/_1"
            android:textColor="#455A64"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/_2"
            android:textColor="#386FC5"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbtn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/_3"
            android:textColor="#386FC5"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbtn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/_4"
            android:textColor="#455A64"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbtn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/_5"
            android:textColor="#386FC5"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/show_list"
            android:textColor="#F4F7FB"
            android:textSize="14sp"
            app:backgroundTint="#3FA0BD"
            tools:ignore="TextContrastCheck"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/insert"
            android:textColor="#F0F3F8"
            android:textSize="14sp"
            app:backgroundTint="#75A9D3"
            tools:ignore="TextContrastCheck"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>